--- a/musicians.html
+++ b/musicians.html
@@ -71,9 +71,9 @@
                 <a href="https://open.spotify.com/artist/73JBR5s2PVvUjGu6tIqjqx" style="color:#00FF19"><b>
                     Walter Murphy</b></a>, 
                 <a href="https://open.spotify.com/artist/78cT0dM5Ivm722EP2sgfDh" style="color:#00FF19"><b>
-                    Bill Wurtz</b></a>, 
+                    Bill Wurtz</b></a> and 
                 <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" style="color:#00FF19"><b>
-                    João Donato</b></a>, 
+                    João Donato</b></a>
             </ul>
         <p><a href="/mute-ante/index.html" style="color:#F0F0F0"> ⇤ go back</a></p>
     </div></body>
