finished the interests page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="/mute-ante/difference.html" style="color:#F0F0F0"><b>difference</b></a> ↵<br>
             <a href="/mute-ante/musicians.html" style="color:#F0F0F0"><b>musicians</b></a> ↵<br>
             <a href="/mute-ante/playlists.html" style="color:#F0F0F0"><b>playlists</b></a> ↵<br>
-            <a href="/mute-ante/interests.html" style="color:#F0F0F0"><b>interests (WIP)</b></a> ↵<br>
+            <a href="/mute-ante/interests.html" style="color:#F0F0F0"><b>interests</b></a> ↵<br>
         </p></div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left"><h2 style="margin-top: 0px;"><b>important links</b></h2>
