changed interest page title

--- a/interests.html
+++ b/interests.html
@@ -25,7 +25,7 @@
 
     <body><div class="this-container">
 
-        <h1><b>→ interests</b></h1>
+        <h1><b>→ stuff I find interesting</b></h1>
         <ul>
             <li><b>Language learning</b>: finding new ways to communicate things to others is always fun. I'm proficient in <a href="https://en.wikipedia.org/wiki/Toki_Pona" style="color:#F0F0F0"><b>toki pona</b></a>, a constructed language with 137 words, currently interested in learning <a href="https://en.wikipedia.org/wiki/Tupi_language" style="color:#F0F0F0"><b>Old Tupi</b></a>, the ancestor to several indigenous languages in South America.<br></li>
             <li><b>Coding things</b>: i'm most accustomed to working with Python (more specifically pygame) and, now that i have a website, some basic html and css.<br></li>
