added duster's bandcamp

--- a/musicians.html
+++ b/musicians.html
@@ -54,7 +54,7 @@
             <li><b>Honorable Mentions: </b>
                 <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" style="color:#00FF19"><b>
                     Astrud Gilberto</b></a>, 
-                <a href="https://open.spotify.com/artist/5AyEXCtu3xnnsTGCo4RVZh" style="color:#00FF19"><b>
+                <a href="https://dusternumero.bandcamp.com/" style="color:#0094FF"><b>
                     Duster</b></a>, 
                 <a href="https://music.midwestcollective.us/album/odyssey" style="color:#0094FF"><b>
                     HOME</b></a>, 
