added math and physics websited

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
         <p>
-            <a href="/mute-ante/interests.html" style="color:#F0F0F0"><b>interests</b></a> ↵<br>
-            <a href="/mute-ante/musicians.html" style="color:#F0F0F0"><b>musicians</b></a> ↵<br>
-            <a href="/mute-ante/playlists.html" style="color:#F0F0F0"><b>playlists</b></a> ↵<br>
-            <a href="/mute-ante/difference.html" style="color:#F0F0F0"><b>difference</b></a> ↵<br>
+            <a href="/mute-ante/interests.html" style="color:#F0F0F0"><b>my interests</b></a> ↵<br>
+            <a href="/mute-ante/musicians.html" style="color:#F0F0F0"><b>cool musicians</b></a> ↵<br>
+            <a href="/mute-ante/websites.html" style="color:#F0F0F0"><b>cool websites (WIP)</b></a> ↵<br>
+            <a href="/mute-ante/playlists.html" style="color:#F0F0F0"><b>my playlists</b></a> ↵<br>
+            <a href="/mute-ante/difference.html" style="color:#F0F0F0"><b>on difference</b></a> ↵<br>
         </p></div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left"><h2 style="margin-top: 0px;"><b>important links</b></h2>
