added geography and flags

--- a/websites.html
+++ b/websites.html
@@ -10,6 +10,7 @@
     <body><div class="container">
         <h1><b>→ cool websites</b></h1><br>
         <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/geo" style="color:#F0F0F0">geography and flags</a></b></h2>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my discord!</p>
 
