--- a/websites.html
+++ b/websites.html
@@ -9,7 +9,9 @@
 
     <body><div class="container">
         <h1><b>→ cool websites</b></h1><br>
+        <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/lang" style="color:#F0F0F0">language</a></b></h2>
         <h2><b>→ <a href="/mute-ante/websites/geo" style="color:#F0F0F0">geography and flags</a></b></h2>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my discord!</p>
