removed a dingus line break

--- a/websites.html
+++ b/websites.html
@@ -8,7 +8,7 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1><b>→ cool websites</b></h1><br>
+        <h1><b>→ cool websites</b></h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics</a></b></h2>
         <h2><b>→ <a href="/mute-ante/websites/lang" style="color:#F0F0F0">language</a></b></h2>
