--- a/websites.html
+++ b/websites.html
@@ -14,7 +14,7 @@
         <h2><b>→ <a href="/mute-ante/websites/lang" style="color:#F0F0F0">language</a></b></h2>
         <h2><b>→ <a href="/mute-ante/websites/geo" style="color:#F0F0F0">geography and flags</a></b></h2>
 
-        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my discord!</p>
+        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com" style="color:#F0F0F0"><b>email</b></a>!</p>
 
         <p><a href="/mute-ante/index.html" style="color:#F0F0F0"> ⇤ go back</a></p>
     </div></body>
