added the miscellaneous websites

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>
             <a href="/mute-ante/interests.html" style="color:#F0F0F0"><b>my interests</b></a> ↵<br>
             <a href="/mute-ante/musicians.html" style="color:#F0F0F0"><b>cool musicians</b></a> ↵<br>
-            <a href="/mute-ante/websites.html" style="color:#F0F0F0"><b>cool websites (WIP)</b></a> ↵<br>
+            <a href="/mute-ante/websites.html" style="color:#F0F0F0"><b>cool websites</b></a> ↵<br>
             <a href="/mute-ante/playlists.html" style="color:#F0F0F0"><b>my playlists</b></a> ↵<br>
             <a href="/mute-ante/difference.html" style="color:#F0F0F0"><b>on difference</b></a> ↵<br>
         </p></div>
