--- a/websites.html
+++ b/websites.html
@@ -10,9 +10,10 @@
     <body><div class="container">
         <h1><b>→ cool websites</b></h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
-        <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/lang" style="color:#F0F0F0">language</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/geo" style="color:#F0F0F0">geography and flags</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics (15)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/lang" style="color:#F0F0F0">language (5)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/geo" style="color:#F0F0F0">geography and flags (4)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/misc" style="color:#F0F0F0">miscellaneously interesting (12)</a></b></h2>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com" style="color:#F0F0F0"><b>email</b></a>!</p>
 
