--- a/websites.html
+++ b/websites.html
@@ -5,9 +5,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+                .this-container{
+            position: absolute;
+            left: 50%;
+            bottom: 50%;
+            transform: translate(-50%, 50%);
+            width: 500px;
+            padding: 20px;
+            border: solid #F0F0F0 2px;
+            border-radius: 30px;
+            line-height: 1.5;}
+    
+    </style></head>
 
-    <body><div class="container">
+    <body><div class="this-container">
         <h1><b>→ cool websites</b></h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics (15)</a></b></h2>
