removed white color from links

--- a/difference.html
+++ b/difference.html
@@ -38,6 +38,6 @@
             <br>
             <br>If you have anything to say about this, <i>bad or good</i>, or if i'm forgetting something, please dm me through <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a>.
         </blockquote></figure><br>
-        <p><a href="/mute-ante/index.html" style="color:#F0F0F0"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
     </div>
     </body>
