--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
         <p>
-            <a href="/mute-ante/interests.html" style="color:#F0F0F0"><b>my interests</b></a> ↵<br>
-            <a href="/mute-ante/musicians.html" style="color:#F0F0F0"><b>cool musicians</b></a> ↵<br>
-            <a href="/mute-ante/websites.html" style="color:#F0F0F0"><b>cool websites</b></a> ↵<br>
-            <a href="/mute-ante/playlists.html" style="color:#F0F0F0"><b>my playlists</b></a> ↵<br>
-            <a href="/mute-ante/difference.html" style="color:#F0F0F0"><b>on difference</b></a> ↵<br>
+            <a href="/mute-ante/interests.html"><b>my interests</b></a> ↵<br>
+            <a href="/mute-ante/musicians.html"><b>cool musicians</b></a> ↵<br>
+            <a href="/mute-ante/websites.html"><b>cool websites</b></a> ↵<br>
+            <a href="/mute-ante/playlists.html"><b>my playlists</b></a> ↵<br>
+            <a href="/mute-ante/difference.html"><b>on difference</b></a> ↵<br>
         </p></div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left"><h2 style="margin-top: 0px;"><b>important links</b></h2>
         <ul>
             <li><a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF">talk to me (<b>discord</b>)</a><br></li>
-            <li><a href="mailto:cvni1981@gmail.com" style="color:#F0F0F0">talk to me but slower (<b>email</b>)</a></li>
+            <li><a href="mailto:cvni1981@gmail.com">talk to me but slower (<b>email</b>)</a></li>
         </ul>
         <h2><b>less important links</b></h2>
         <ul>
