--- a/websites.html
+++ b/websites.html
@@ -23,12 +23,12 @@
     <body><div class="this-container">
         <h1><b>→ cool websites</b></h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
-        <h2><b>→ <a href="/mute-ante/websites/math" style="color:#F0F0F0">math and physics (15)</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/lang" style="color:#F0F0F0">language (5)</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/geo" style="color:#F0F0F0">geography and flags (4)</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/misc" style="color:#F0F0F0">miscellaneously interesting (12)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/math">math and physics (15)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/lang">language (5)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/geo">geography and flags (4)</a></b></h2>
+        <h2><b>→ <a href="/mute-ante/websites/misc">miscellaneously interesting (12)</a></b></h2>
 
-        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com" style="color:#F0F0F0"><b>email</b></a>!</p>
+        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com"><b>email</b></a>!</p>
 
-        <p><a href="/mute-ante/index.html" style="color:#F0F0F0"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
     </div></body>
