--- a/websites/misc.html
+++ b/websites/misc.html
@@ -10,41 +10,41 @@
     <body><div class="container">
         <h1><b>→ miscellaneously interesting</b></h1><br>
 
-        <h2><b>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam" style="color:#F0F0F0">Sea Otter Live Cam</a></b></h2>
+        <h2><b>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></b></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
-        <h2><b>→ <a href="https://spacedashboard.com/" style="color:#F0F0F0">Space Dashboard</a></b></h2>
+        <h2><b>→ <a href="https://spacedashboard.com/">Space Dashboard</a></b></h2>
         <p>A live view of space from the ISS. Made by Caleb.</p>
 
-        <h2><b>→ <a href="https://books.google.com/ngrams" style="color:#F0F0F0">Google Ngram Viewer</a></b></h2>
+        <h2><b>→ <a href="https://books.google.com/ngrams">Google Ngram Viewer</a></b></h2>
         <p>Graph the usage of any word in print since 1800 in many languages.</p>
 
-        <h2><b>→ <a href="https://molview.org/" style="color:#F0F0F0">OneZoom</a></b></h2>
+        <h2><b>→ <a href="https://molview.org/">OneZoom</a></b></h2>
         <p>Zoom through a branching tree of every living species on Earth.</p>
 
-        <h2><b>→ <a href="https://artsandculture.google.com/" style="color:#F0F0F0">Google Arts & Culture</a></b></h2>
+        <h2><b>→ <a href="https://artsandculture.google.com/">Google Arts & Culture</a></b></h2>
         <p>Browse through thousands of art pieces from many places, times and styles. Basically a giant online museum.</p>
 
-        <h2><b>→ <a href="https://tasvideos.org/" style="color:#F0F0F0">TASVideos</a></b></h2>
+        <h2><b>→ <a href="https://tasvideos.org/">TASVideos</a></b></h2>
         <p>Look at tons of videogames being played perfectly with the help of tools (Tool-assistes speedrunning).</p>
 
-        <h2><b>→ <a href="https://molview.org/" style="color:#F0F0F0">MolView</a></b></h2>
+        <h2><b>→ <a href="https://molview.org/">MolView</a></b></h2>
         <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!.</p>
 
-        <h2><b>→ <a href="https://michaelbach.de/ot/" style="color:#F0F0F0">Optical Illusions & Visual Phenomena</a></b></h2>
+        <h2><b>→ <a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></b></h2>
         <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. <b>Please don't go here if you are sensitive to fast movement and flashing images and stuff.</b></p>
 
-        <h2><b>→ <a href="https://standardsmanual.com/" style="color:#F0F0F0">Standards Manual</a></b></h2>
+        <h2><b>→ <a href="https://standardsmanual.com/">Standards Manual</a></b></h2>
         <p>Reprints of old graphics standards manuals and other cool design things. By Jesse Reed and Hamish Smyth.</p>
 
-        <h2><b>→ <a href="https://625.uk.com/" style="color:#F0F0F0">Andrew Wiseman's Television Room</a></b></h2>
+        <h2><b>→ <a href="https://625.uk.com/">Andrew Wiseman's Television Room</a></b></h2>
         <p>A site full of stuff about british TV, including logo histories, recreated idents and clocks as well as other stuff.</p>
 
-        <h2><b>→ <a href="https://dood.al/pinktrombone/" style="color:#F0F0F0">Pink Trombone</a></b></h2>
+        <h2><b>→ <a href="https://dood.al/pinktrombone/">Pink Trombone</a></b></h2>
         <p>Make a voice speak by moving the cursor around. By Neil Thapen.</p>
 
-        <h2><b>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page" style="color:#F0F0F0">CLG Wiki</a></b></h2>
+        <h2><b>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></b></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
 
-        <p><a href="/mute-ante/websites.html" style="color:#F0F0F0"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/websites.html"> ⇤ go back</a></p>
     </div></body>
