--- a/musicians.html
+++ b/musicians.html
@@ -74,5 +74,5 @@
                 <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" style="color:#00FF19"><b>
                     João Donato</b></a>
             </ul>
-        <p><a href="/mute-ante/index.html" style="color:#F0F0F0"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
     </div></body>
