--- a/websites/math.html
+++ b/websites/math.html
@@ -10,50 +10,50 @@
     <body><div class="container">
         <h1><b>→ math and physics</b></h1><br>
 
-        <h2><b>→ <a href="https://codepen.io/akm2/full/rHIsa" style="color:#F0F0F0">Gravity Points</a></b></h2>
+        <h2><b>→ <a href="https://codepen.io/akm2/full/rHIsa">Gravity Points</a></b></h2>
         <p>A cool interactive simulation of orbiting points by Akimitsu Hamamuro.</p>
 
-        <h2><b>→ <a href="https://www.c82.net/euclid/" style="color:#F0F0F0">Byrne's Euclid</a></b></h2>
+        <h2><b>→ <a href="https://www.c82.net/euclid/">Byrne's Euclid</a></b></h2>
         <p>Byrne's colorful and playful rendition of Euclid's Elements in an interactive website by Nicholas Rougeux.</p>
 
-        <h2><b>→ <a href="ttps://www.polyhedra.net/en/" style="color:#F0F0F0">Paper Models of Polyhedra</a></b></h2>
+        <h2><b>→ <a href="ttps://www.polyhedra.net/en/">Paper Models of Polyhedra</a></b></h2>
         <p>A site by Gijs Korthals Altes with a ton of printable guides for making polyhedrons out of paper!</p>
 
-        <h2><b>→ <a href="https://nathanfriend.io/inspiral-web/" style="color:#F0F0F0">Inspiral Web</a></b></h2>
+        <h2><b>→ <a href="https://nathanfriend.io/inspiral-web/">Inspiral Web</a></b></h2>
         <p>An online spirograph by Nathan Friend!</p>
 
-        <h2><b>→ <a href="https://stars.chromeexperiments.com/" style="color:#F0F0F0">100,000 Stars</a></b></h2>
+        <h2><b>→ <a href="https://stars.chromeexperiments.com/">100,000 Stars</a></b></h2>
         <p>A wonderful tour of the 100,000 closest stars, coded by space enthusiasts at Google.</p>
 
-        <h2><b>→ <a href="https://phet.colorado.edu/en/simulations/filter?subjects=physics&type=html&sort=alpha" style="color:#F0F0F0">PhET Physics Simulations</a></b></h2>
+        <h2><b>→ <a href="https://phet.colorado.edu/en/simulations/filter?subjects=physics&type=html&sort=alpha">PhET Physics Simulations</a></b></h2>
         <p>A bunch of neat physics simulations by a team from the University of Colorado.</p>
 
-        <h2><b>→ <a href="https://stars.chromeexperiments.com/" style="color:#F0F0F0">Theories of Everything, Mapped</a></b></h2>
+        <h2><b>→ <a href="https://stars.chromeexperiments.com/">Theories of Everything, Mapped</a></b></h2>
         <p>A map of many explanations on how everything works, by Natalie Wolchover.</p>
 
-        <h2><b>→ <a href="http://dmccooey.com/polyhedra/" style="color:#F0F0F0">Visual Polyhedra</a></b></h2>
+        <h2><b>→ <a href="http://dmccooey.com/polyhedra/">Visual Polyhedra</a></b></h2>
         <p>A site by David I. McCooey with many many many interactive 3d polyhedra</p>
 
-        <h2><b>→ <a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html" style="color:#F0F0F0">If the Moon Were Only 1 Pixel</a></b></h2>
+        <h2><b>→ <a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html">If the Moon Were Only 1 Pixel</a></b></h2>
         <p>An accurate representation of the Solar System by Josh Worth. Shows how empty space really is.</p>
 
-        <h2><b>→ <a href="https://www.cut-the-knot.org/pythagoras/index.shtml" style="color:#F0F0F0">Pythagorean Theorem and its many proofs</a></b></h2>
+        <h2><b>→ <a href="https://www.cut-the-knot.org/pythagoras/index.shtml">Pythagorean Theorem and its many proofs</a></b></h2>
         <p>A collection of 122 proofs of the Pythagorean Theorem by Alexander Bogomolny.</p>
 
-        <h2><b>→ <a href="https://archive.org/details/fiftynineicosahe0000unse" style="color:#F0F0F0">The Fifty-Nine Icosahedra</a></b></h2>
+        <h2><b>→ <a href="https://archive.org/details/fiftynineicosahe0000unse">The Fifty-Nine Icosahedra</a></b></h2>
         <p>A guide by H. Coxeter on beautiful stellations of the icosahedron and how to find them.</p>
 
-        <h2><b>→ <a href="https://archive.org/details/ioanniskepplerih00kepl" style="color:#F0F0F0">Harmonices Mundi</a></b></h2>
+        <h2><b>→ <a href="https://archive.org/details/ioanniskepplerih00kepl">Harmonices Mundi</a></b></h2>
         <p>Johannes Kepler's book on the orbits of the planets and their relation to geometry and harmony.</p>
 
-        <h2><b>→ <a href="https://www.visnos.com/demos/fractal" style="color:#F0F0F0">Online Fractal Creator</a></b></h2>
+        <h2><b>→ <a href="https://www.visnos.com/demos/fractal">Online Fractal Creator</a></b></h2>
         <p>An online tree fractal creator by Michael McDaid.</p>
 
-        <h2><b>→ <a href="https://en.wikipedia.org/wiki/Uniform_tilings_in_hyperbolic_plane" style="color:#F0F0F0">Uniform tilings in hyperbolic plane</a></b></h2>
+        <h2><b>→ <a href="https://en.wikipedia.org/wiki/Uniform_tilings_in_hyperbolic_plane">Uniform tilings in hyperbolic plane</a></b></h2>
         <p>Lots of pretty pictures to be looked at.</p>
 
-        <h2><b>→ <a href="https://oeis.org/" style="color:#F0F0F0">The On-Line Encyclopedia of Integer Sequences</a></b></h2>
+        <h2><b>→ <a href="https://oeis.org/">The On-Line Encyclopedia of Integer Sequences</a></b></h2>
         <p>A database of over 300000 integer sequences and lots of info about them. Founded by N. Sloane in 1964.</p>
 
-        <p><a href="/mute-ante/websites.html" style="color:#F0F0F0"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/websites.html"> ⇤ go back</a></p>
     </div></body>
