changed the links to their classes

--- a/difference.html
+++ b/difference.html
@@ -36,7 +36,7 @@
             <br>
             <br>A bit confusing, but i hope you get it.
             <br>
-            <br>If you have anything to say about this, <i>bad or good</i>, or if i'm forgetting something, please dm me through <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a>.
+            <br>If you have anything to say about this, <i>bad or good</i>, or if i'm forgetting something, please dm me through <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a>.
         </blockquote></figure><br>
         <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
     </div>
