--- a/websites.html
+++ b/websites.html
@@ -28,7 +28,7 @@
         <h2><b>→ <a href="/mute-ante/websites/geo">geography and flags (4)</a></b></h2>
         <h2><b>→ <a href="/mute-ante/websites/misc">miscellaneously interesting (12)</a></b></h2>
 
-        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com"><b>email</b></a>!</p>
+        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com"><b>email</b></a>!</p>
 
         <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
     </div></body>
