--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left"><h2 style="margin-top: 0px;"><b>important links</b></h2>
         <ul>
-            <li><a href="http://discordapp.com/users/691348576093077535" style="color:#413DFF">talk to me (<b>discord</b>)</a><br></li>
+            <li><a href="http://discordapp.com/users/691348576093077535" class="discord">talk to me (<b>discord</b>)</a><br></li>
             <li><a href="mailto:cvni1981@gmail.com">talk to me but slower (<b>email</b>)</a></li>
         </ul>
         <h2><b>less important links</b></h2>
         <ul>
-            <li><a href="https://bandcamp.com/cvni1981" style="color:#0094FF">music i like enough to buy (<b>bandcamp</b>)</a><br></li>
-            <li><a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" style="color:#FF0000">basically nothing (<b>youtube</b>)</a><br></li>
+            <li><a href="https://bandcamp.com/cvni1981" class="bandcamp">music i like enough to buy (<b>bandcamp</b>)</a><br></li>
+            <li><a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">basically nothing (<b>youtube</b>)</a><br></li>
         </ul></div>
     </div></body>
