--- a/musicians.html
+++ b/musicians.html
@@ -26,52 +26,52 @@
 
         <h1><b>→ favorite musicians</b></h1>
         <ul>
-            <li><a href="https://gingerroot.bandcamp.com/" style="color:#0094FF"><b>
+            <li><a href="https://gingerroot.bandcamp.com/" class="bandcamp"><b>
                 Ginger Root/Cameron Lew</b></a>: agressive elevator soul and city pop bops<br></li>
-            <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" style="color:#00FF19"><b>
+            <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" class="spotify"><b>
                 Tame Impala</b></a>: awesome psychedelic pop<br></li>
-            <li><a href="https://open.spotify.com/artist/1lfkgC6uwLGN8qsvoaRgzT" style="color:#00FF19"><b>
+            <li><a href="https://open.spotify.com/artist/1lfkgC6uwLGN8qsvoaRgzT" class="spotify"><b>
                 The Bob Davis Group</b></a>: calm and beautiful jazz<br></li>
-            <li><a href="https://zelmastone.bandcamp.com/" style="color:#0094FF"><b>
+            <li><a href="https://zelmastone.bandcamp.com/" class="bandcamp"><b>
                 Zelma Stone</b></a>: delightful bedroom pop<br></li>
-            <li><a href="https://xahoy.bandcamp.com/" style="color:#0094FF"><b>
+            <li><a href="https://xahoy.bandcamp.com/" class="bandcamp"><b>
                 Ahoy/Stuart Brown</b></a>: overly good videogame doc bgm<br></li>
-            <li><a href="https://posy.bandcamp.com/" style="color:#0094FF"><b>
+            <li><a href="https://posy.bandcamp.com/" class="bandcamp"><b>
                 Posy</b></a>: like Ahoy, also makes great youtube content<br></li>
-            <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" style="color:#00FF19"><b>
+            <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" class="spotify"><b>
                 Polo & Pan</b></a>: french house bops<br></li>
-            <li><a href="https://open.spotify.com/artist/77ZUbcdoU5KCPHNUl8bgQy" style="color:#00FF19"><b>
+            <li><a href="https://open.spotify.com/artist/77ZUbcdoU5KCPHNUl8bgQy" class="spotify"><b>
                 João Gilberto</b></a> and
-            <a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" style="color:#00FF19"><b>
+            <a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" class="spotify"><b>
                 Tom Jobim</b></a>: awesome blend of bossa nova and jazz<br></li>
-            <li><a href="https://open.spotify.com/artist/4xJbCqwNfYlbl8v026L24T" style="color:#00FF19"><b>
+            <li><a href="https://open.spotify.com/artist/4xJbCqwNfYlbl8v026L24T" class="spotify"><b>
                 Alan Hawkshaw</b></a>: great bgm/library music<br></li>
-            <li><a href="https://sevish.bandcamp.com/" style="color:#0094FF"><b>
+            <li><a href="https://sevish.bandcamp.com/" class="bandcamp"><b>
                 Sevish</b></a>: electronic microtonal/xenharmonic music<br></li>
-            <li><a href="https://jackstauber.bandcamp.com/" style="color:#0094FF"><b>
+            <li><a href="https://jackstauber.bandcamp.com/" class="bandcamp"><b>
                 Jack Stauber</b></a>: needs no explanation<br></li>
             <li><b>Honorable Mentions: </b>
-                <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" class="spotify"><b>
                     Astrud Gilberto</b></a>, 
-                <a href="https://dusternumero.bandcamp.com/" style="color:#0094FF"><b>
+                <a href="https://dusternumero.bandcamp.com/" class="bandcamp"><b>
                     Duster</b></a>, 
-                <a href="https://music.midwestcollective.us/album/odyssey" style="color:#0094FF"><b>
+                <a href="https://music.midwestcollective.us/album/odyssey" class="bandcamp"><b>
                     HOME</b></a>, 
-                <a href="https://macroblank.bandcamp.com" style="color:#0094FF"><b>
+                <a href="https://macroblank.bandcamp.com" class="bandcamp"><b>
                     Macroblank</b></a>, 
-                <a href="https://open.spotify.com/artist/6tOsSffQQIXmK8TqsDck8t" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/6tOsSffQQIXmK8TqsDck8t" class="spotify"><b>
                     Chico Buarque</b></a>, 
-                <a href="https://open.spotify.com/artist/7oEkUINVIj1Nr3Wnj8tzqr" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/7oEkUINVIj1Nr3Wnj8tzqr" class="spotify"><b>
                     Gilberto Gil</b></a>, 
-                <a href="https://open.spotify.com/artist/0dAZ2slrElfR0Y5flcoSPt" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/0dAZ2slrElfR0Y5flcoSPt" class="spotify"><b>
                     Dorothy Ashby</b></a>, 
-                <a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" style="color:#0094FF"><b>
+                <a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" class="bandcamp"><b>
                     Tally Hall</b></a>, 
-                <a href="https://open.spotify.com/artist/73JBR5s2PVvUjGu6tIqjqx" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/73JBR5s2PVvUjGu6tIqjqx" class="spotify"><b>
                     Walter Murphy</b></a>, 
-                <a href="https://open.spotify.com/artist/78cT0dM5Ivm722EP2sgfDh" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/78cT0dM5Ivm722EP2sgfDh" class="spotify"><b>
                     Bill Wurtz</b></a> and 
-                <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" style="color:#00FF19"><b>
+                <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" class="spotify"><b>
                     João Donato</b></a>
             </ul>
         <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
