--- a/playlists.html
+++ b/playlists.html
@@ -9,22 +9,22 @@
 
     <body><div class="container">
         <h1><b>→ some playlists</b></h1><br>
-        <h2><b>→ <a href="https://open.spotify.com/playlist/4Sg7aKaOmRw09N8RCCQQNC"  style="color:#00FF19">pilin pona lili</a></b></h2>
+        <h2><b>→ <a href="https://open.spotify.com/playlist/4Sg7aKaOmRw09N8RCCQQNC"  class="spotify">pilin pona lili</a></b></h2>
         <p>almost 12 hours worth of bossa nova, jazz and other mostly brazillian songs that i like to use as background music.</p>
 
-        <h2><b>→ <a href="https://open.spotify.com/playlist/6HSXSbOEyiAzFn7w1gcyRf"  style="color:#00FF19">coffee ☕</a></b></h2>
+        <h2><b>→ <a href="https://open.spotify.com/playlist/6HSXSbOEyiAzFn7w1gcyRf"  class="spotify">coffee ☕</a></b></h2>
         <p>a playlist with hip hop beats and minimal lyrics. perfect for road trips i'd say.</p>
 
-        <h2><b>→ <a href="https://open.spotify.com/playlist/40dQ8JhCGcN6e8PYvKxtBd"  style="color:#00FF19">jan Juli</a></b></h2>
+        <h2><b>→ <a href="https://open.spotify.com/playlist/40dQ8JhCGcN6e8PYvKxtBd"  class="spotify">jan Juli</a></b></h2>
         <p>several indie pop songs, main artist is Zelma Stone.</p>
 
-        <h2><b>→ <a href="https://open.spotify.com/playlist/7teLfvnSdmd0VuOzVaGzlW"  style="color:#00FF19">ilo Katen</a></b></h2>
+        <h2><b>→ <a href="https://open.spotify.com/playlist/7teLfvnSdmd0VuOzVaGzlW"  class="spotify">ilo Katen</a></b></h2>
         <p>a kinda small playlist with a bunch of songs by Tame Impala and similar indie pop songs.</p>
 
-        <h2><b>→ <a href="https://open.spotify.com/playlist/6qmlzKJ0Cmc0RVqQPSFMhg"  style="color:#00FF19">pilin TAWA</a></b></h2>
+        <h2><b>→ <a href="https://open.spotify.com/playlist/6qmlzKJ0Cmc0RVqQPSFMhg"  class="spotify">pilin TAWA</a></b></h2>
         <p>a lot of house and songs that make you want to move a lot, mainly by Polo & Pan.</p>
 
-        <h2><b>→ <a href="https://open.spotify.com/playlist/07pJxfMFVR3zfIV9pnIp6w"  style="color:#00FF19">sad box</a></b></h2>
+        <h2><b>→ <a href="https://open.spotify.com/playlist/07pJxfMFVR3zfIV9pnIp6w"  class="spotify">sad box</a></b></h2>
         <p>music for staying alone in front of a screen. main artist is Duster.</p>
         <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
     </div></body>
