added centered-container class

--- a/musicians.html
+++ b/musicians.html
@@ -5,24 +5,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
-    <style>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-        .this-container{
-            position: absolute;
-            left: 50%;
-            bottom: 50%;
-            transform: translate(-50%, 50%);
-            width: 500px;
-            padding: 20px;
-            border: solid #F0F0F0 2px;
-            border-radius: 30px;
-            line-height: 1.5;}
-
-    </style>
-    </head>
-
-    <body><div class="this-container">
+    <body><div class="centered-container">
 
         <h1><b>→ favorite musicians</b></h1>
         <ul>
