--- a/websites/geo.html
+++ b/websites/geo.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="container">
+    <body><div class="centered-container">
         <h1><b>→ geography and flags</b></h1><br>
 
         <h2><b>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></b></h2>
