--- a/jan.html
+++ b/jan.html
@@ -16,7 +16,7 @@
             <br>sona mun, sona kasi, sona soweli, sona nasin...
             <br>taso, ona li ken ala sona e ale...
             <br>insa lawa ona li lili mute.
-            <b> sona mute mute mute li lon.
+            <br>sona mute mute mute li lon.
             <br>jan li wile pali e ijo mute kepeken sona ona.
             <br>li wile pona e lon ona.
             <br>li wile pona e lon pi jan ante.
