--- a/jan.html
+++ b/jan.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div>
+    <body><div class="container">
 
         <h1><b>→ jan</b></h1>
         <figure><blockquote>
