made the back link even simpler

--- a/jan.html
+++ b/jan.html
@@ -70,6 +70,6 @@
             <br>toki la o pona.
             <br>o jan pona.
         </blockquote></figure><br>
-        <p><a href="/mute-ante/index"> ⇤ go back</a></p>
+        <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div>
     </body>
