made the links .htmlless

--- a/websites/geo.html
+++ b/websites/geo.html
@@ -22,5 +22,5 @@
         <h2><b>→ <a href="https://heywhatsthat.com/">HeyWhatsThat</a></b></h2>
         <p>A neat tool that shows how far you can see from a location, as well as what peaks can be seen.</p>
 
-        <p><a href="/mute-ante/websites.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
     </div></body>
