--- a/websites/lang.html
+++ b/websites/lang.html
@@ -25,5 +25,5 @@
         <h2><b>→ <a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></b></h2>
         <p>A paper by José Hernández-Orallo with a way to write English with unambiguous spelling.</p>
 
-        <p><a href="/mute-ante/websites.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
     </div></body>
