--- a/websites/math.html
+++ b/websites/math.html
@@ -55,5 +55,5 @@
         <h2><b>→ <a href="https://oeis.org/">The On-Line Encyclopedia of Integer Sequences</a></b></h2>
         <p>A database of over 300000 integer sequences and lots of info about them. Founded by N. Sloane in 1964.</p>
 
-        <p><a href="/mute-ante/websites.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
     </div></body>
