--- a/websites/misc.html
+++ b/websites/misc.html
@@ -46,5 +46,5 @@
         <h2><b>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></b></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
 
-        <p><a href="/mute-ante/websites.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
     </div></body>
