--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
         <p>
-            <a href="/mute-ante/interests.html"><b>my interests</b></a> ↵<br>
-            <a href="/mute-ante/musicians.html"><b>cool musicians</b></a> ↵<br>
-            <a href="/mute-ante/websites.html"><b>cool websites</b></a> ↵<br>
-            <a href="/mute-ante/playlists.html"><b>my playlists</b></a> ↵<br>
-            <a href="/mute-ante/difference.html"><b>on difference</b></a> ↵<br>
+            <a href="/mute-ante/interests"><b>my interests</b></a> ↵<br>
+            <a href="/mute-ante/musicians"><b>cool musicians</b></a> ↵<br>
+            <a href="/mute-ante/websites"><b>cool websites</b></a> ↵<br>
+            <a href="/mute-ante/playlists"><b>my playlists</b></a> ↵<br>
+            <a href="/mute-ante/difference"><b>on difference</b></a> ↵<br>
         </p></div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left"><h2 style="margin-top: 0px;"><b>important links</b></h2>
