--- a/musicians.html
+++ b/musicians.html
@@ -59,5 +59,5 @@
                 <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" class="spotify"><b>
                     João Donato</b></a>
             </ul>
-        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
