--- a/playlists.html
+++ b/playlists.html
@@ -26,5 +26,5 @@
 
         <h2><b>→ <a href="https://open.spotify.com/playlist/07pJxfMFVR3zfIV9pnIp6w"  class="spotify">sad box</a></b></h2>
         <p>music for staying alone in front of a screen. main artist is Duster.</p>
-        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
