--- a/websites.html
+++ b/websites.html
@@ -17,5 +17,5 @@
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com"><b>email</b></a>!</p>
 
-        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
