my dingus brain forgor to modify interests

--- a/interests.html
+++ b/interests.html
@@ -19,5 +19,5 @@
             <li><b>Travelling</b>: seeing new places and people is great, as well as being relaxing and serving as inspiration for things.<br></li>
             <li><b>Ohter things</b>: listening to music, taking photos, chatting, flags, typography and design.<br></li>
             </ul>
-        <p><a href="/mute-ante/index.html"> ⇤ go back</a></p>
+        <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
