changed the index layout

--- a/index.html
+++ b/index.html
@@ -27,22 +27,19 @@
 
     <body><div class="this-container">
         <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
-        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
-        <p>
-            <a href="/mute-ante/interests"><b>my interests</b></a> ↵<br>
-            <a href="/mute-ante/musicians"><b>cool musicians</b></a> ↵<br>
-            <a href="/mute-ante/websites"><b>cool websites</b></a> ↵<br>
-            <a href="/mute-ante/playlists"><b>my playlists</b></a> ↵<br>
-            <a href="/mute-ante/difference"><b>on difference</b></a> ↵<br>
-        </p></div>
+        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p></div>
         <div style="border-left: solid 2px #F0F0F0"></div>
-        <div style="text-align: left"><h2 style="margin-top: 0px;"><b>important links</b></h2>
+        <div style="text-align: left"><h2 style="margin-top: 0px;"><b>onsite things</b></h2>
+        <ul>
+            <li><a href="/mute-ante/interests"><b>my interests</b></a><br></li>
+            <li><a href="/mute-ante/musicians"><b>cool musicians</b></a><br></li>
+            <li><a href="/mute-ante/websites"><b>cool websites</b></a><br></li>
+            <li><a href="/mute-ante/playlists"><b>my playlists</b></a><br></li>
+            <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li></ul>
+        <h2><b>places i'm at</b></h2>
         <ul>
             <li><a href="http://discordapp.com/users/691348576093077535" class="discord">talk to me (<b>discord</b>)</a><br></li>
             <li><a href="mailto:cvni1981@gmail.com">talk to me but slower (<b>email</b>)</a></li>
-        </ul>
-        <h2><b>less important links</b></h2>
-        <ul>
             <li><a href="https://bandcamp.com/cvni1981" class="bandcamp">music i like enough to buy (<b>bandcamp</b>)</a><br></li>
             <li><a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">basically nothing (<b>youtube</b>)</a><br></li>
         </ul></div>
