changed link text

--- a/interests.html
+++ b/interests.html
@@ -17,7 +17,7 @@
             <li><b>History</b>: it's important to know the past and its mistakes to not repeat them. Most interested in <a href="https://en.wikipedia.org/wiki/History_of_Brazil"><b>Brazillian history</b></a>, since it's my country of origin.<br></li>
             <li><b>Drawing things</b>: i mostly make geometric things with <a href="https://en.wikipedia.org/wiki/Straightedge_and_compass_construction"><b>ruler and compass</b></a>, which is fun to work with given its limitations; though i also draw non-geometric things every now and again.<br></li>
             <li><b>Travelling</b>: seeing new places and people is great, as well as being relaxing and serving as inspiration for things.<br></li>
-            <li><b>Ohter things</b>: listening to music, taking photos, chatting, flags, typography and design.<br></li>
+            <li><b>Ohter things</b>: listening to music, taking photos, chatting, making dumb music in Beepbox, flags, typography and design.<br></li>
             </ul>
         <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
