--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             left: 50%;
             bottom: 50%;
             transform: translate(-50%, 50%);
-            grid-template-columns: auto 1px auto;
+            grid-template-columns: auto 1px 47%;
             gap: 30px;
             width: 500px;
             padding: 30px;
