--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             gap: 30px;
             width: 500px;
             padding: 20px;
+            padding-top: 30px; padding-bottom: 30px;
             border: solid #F0F0F0 2px;
             border-radius: 30px;
             line-height: 1.5;
