--- a/jan.html
+++ b/jan.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@1,800&display=swap" rel="stylesheet">     
         <meta charset="UTF-8">
-        <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <title>≠</title></head>
 
     <body><div class="text-container">
 
@@ -27,7 +27,7 @@
             <br>jan li wile e pona tawa jan taso.
             <br>ale li ona.
             <br> 
-            <br>jan mutpadding-top: 30px;e li lon.
+            <br>jan mut=e li lon.
             <br>tenpo suli la jan li lon.
             <br>jan li lon lon ma ale.
             <br>ma seli la, jan li lon.
