--- a/jan.html
+++ b/jan.html
@@ -27,7 +27,7 @@
             <br>jan li wile e pona tawa jan taso.
             <br>ale li ona.
             <br> 
-            <br>jan mut=e li lon.
+            <br>jan mute li lon.
             <br>tenpo suli la jan li lon.
             <br>jan li lon lon ma ale.
             <br>ma seli la, jan li lon.
