--- a/jan.html
+++ b/jan.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@1,800&display=swap" rel="stylesheet">     
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>≠</title></head>
+        <title>≠</title>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="text-container">
 
-        <h1 style="text-align: right"><b>jan ←</b></h1>
+        <h1><b>→ jan</b></h1>
         <figure><blockquote>
             jan li suli.
             <br>jan li ken sona e ijo mute.
