--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <li><a href="/mute-ante/musicians"><b>cool musicians</b></a><br></li>
             <li><a href="/mute-ante/websites"><b>cool websites</b></a><br></li>
             <li><a href="/mute-ante/playlists"><b>my playlists</b></a><br></li>
-            <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li></ul>
+            <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li>
+            <li><a href="/mute-ante/etc"><b>etc</b></a><br></li></ul>
         <h2><b>places i'm at</b></h2>
         <ul>
             <li><a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a><br></li>
