--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -70,6 +70,6 @@
             <br>toki la o pona.
             <br>o jan pona.
         </blockquote></figure><br>
-        <p><a href="/mute-ante/etc"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
     </div>
     </body>
