--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -10,12 +10,11 @@
 
     <body><div class="centered-text-container">
         <h1><b>→ nimi mute</b></h1>
-        <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ale e ona tawa jan.
-        <br>pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
+        <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
-            <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b></a></li>
+            <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a></li>
             </ul>
         <p><a href="/mute-ante"> ⇤ o tawa monsi</a></p>
     </div></body>
