--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -15,7 +15,7 @@
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
             <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a></li>
-            <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu"><b>tomo pi esun lipu</b> (nimi ?)</a></li>
+            <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu"><b>tomo pi esun lipu</b> (nimi 884)</a></li>
             </ul>
         <p><a href="/mute-ante"> ⇤ o tawa monsi</a></p>
     </div></body>
