--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -75,24 +75,22 @@
             <br>mi o kama sona a!
         </blockquote></figure>
         <hr>
-        <figure><blockquote>
-            <br>mi pini e kama sona a.
-            <br>ken la, tenpo kama la ale li pona a.
-            <br>alasa sona pi open suno li ike ala e suno ni a!
-            <br>mi weka tan tomo pi esun lipu, mute la mi weka kepeken tomo tawa; taso, tenpo ni la mi tawa tomo mi kepeken noka a.
-            <br>
-            <br>tawa ni li pona a.
-            <br>sewi li pimeja, mun lili ala li lon tan suno pi tomo sewi.
-            <br>tomo sewi li pimeja kin, mi ken lukin e suno lupa taso.
-            <br>
-            <br>tomo tawa li pana e suno pi kuje loje en jelo en walo.
-            <br>kalama musi Posa Nopa li pana e kon pona tawa tawa ni a.
-            <br>kon li tawa mute, li toki e telo sewi kama a.
-            <br>
-            <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
-            <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
-            <br>mi tawa a!
-        </blockquote></figure><br>
+        mi pini e kama sona a.
+        <br>ken la, tenpo kama la ale li pona a.
+        <br>alasa sona pi open suno li ike ala e suno ni a!
+        <br>mi weka tan tomo pi esun lipu, mute la mi weka kepeken tomo tawa; taso, tenpo ni la mi tawa tomo mi kepeken noka a.
+        <br>
+        <br>tawa ni li pona a.
+        <br>sewi li pimeja, mun lili ala li lon tan suno pi tomo sewi.
+        <br>tomo sewi li pimeja kin, mi ken lukin e suno lupa taso.
+        <br>
+        <br>tomo tawa li pana e suno pi kuje loje en jelo en walo.
+        <br>kalama musi Posa Nopa li pana e kon pona tawa tawa ni a.
+        <br>kon li tawa mute, li toki e telo sewi kama a.
+        <br>
+        <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
+        <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
+        <br>mi tawa a!<br>
         <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
     </div>
     </body>
