--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -10,7 +10,7 @@
     <body><div class="text-container">
 
         <h1><b>→ tomo pi esun lipu</b></h1>
-        <p style="font-size: large">
+        <p style="font-size: large; padding: 10px">
         toki a.
         <br>mi lon tomo pi esun lipu.
         <br>mi wile kama sona lon tomo ni, taso ni li pipo (ken la nimi ni li ike a a a).
@@ -74,7 +74,7 @@
         <br>mi kama wawa a!
         <br>mi o kama sona a!</p>
         <hr>
-        <p style="font-size: large">
+        <p style="font-size: large; padding: 10px">
         mi pini e kama sona a.
         <br>ken la, tenpo kama la ale li pona a.
         <br>alasa sona pi open suno li ike ala e suno ni a!
