removed line breaks

--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -90,7 +90,7 @@
         <br>
         <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
         <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
-        <br>mi tawa a!</p><br>
+        <br>mi tawa a!</p>
         <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
     </div>
     </body>
