added len pi laso telo

--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a></li>
             <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu"><b>tomo pi esun lipu</b> (nimi 884)</a></li>
+            <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo"><b>len pi laso telo</b> (nimi ?)</a></li>
             </ul>
         <p><a href="/mute-ante"> ⇤ o tawa monsi</a></p>
     </div></body>
