--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -53,10 +53,10 @@
         <br>len pi laso telo li lon la insa pi tomo tawa telo li kama pimeja a
         <br>ilo suno li lon.
         <br>ni li musi mute tawa mi a
-        <br>mi kute e kalama musi, tan jan Kamelon Lu (Cameron Lew), kalama musi ona li pona li musi li puwa a!
+        <br>mi kute e kalama musi, tan jan Kamelon Lu (<i>Cameron Lew</i>), kalama musi ona li pona li musi li puwa a!
         <br>
         <br>tomo li lili lukin mute a a a
-        <br>kin la, kalama pi kulupu Akale Wupe (Akalé Wubé), kalama usi ona li pona mute kin...
+        <br>kin la, kalama pi kulupu Akale Wupe (<i>Akalé Wubé</i>), kalama usi ona li pona mute kin...
         <br>sinpin la sewi li pimeja li monsuta.
         <br>telo sewi li weka, taso sewi pimeja li toki e telo sewi kama.
         <br>poka mi la kasi suli mute li lon.
@@ -89,7 +89,7 @@
         <br>o... lape...</p>
         <hr>
         <p style="font-size: large; padding: 10px">
-        <br>wa!
+        wa!
         <br>sewi li kama pimeja suli a...
         <br>mi pilin lape...
         <br>nasin li jo e telo mute a...
