--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -14,7 +14,7 @@
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
-            <li><a href="/mute-ante/nimi-mute/jan"><b>suno</b> (nimi ?)</a></li>
+            <li><a href="/mute-ante/nimi-mute/suno"><b>suno</b> (nimi 218)</a></li>
             <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo"><b>len pi laso telo</b> (nimi 647)</a></li>
             <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a></li>
             <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu"><b>tomo pi esun lipu</b> (nimi 884)</a></li>
