--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="/mute-ante/interests"><b>my interests</b></a><br></li>
             <li><a href="/mute-ante/musicians"><b>cool musicians</b></a><br></li>
             <li><a href="/mute-ante/websites"><b>cool websites</b></a><br></li>
+            <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a><br></li>
             <li><a href="/mute-ante/playlists"><b>my playlists</b></a><br></li>
             <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li></ul>
         <h2><b>places i'm at</b></h2>
