--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="text-container">
+    <body><div class="centered-text-container">
 
         <h1><b>→ tomo ni</b></h1>
         <p style="font-size: large; padding: 10px">
