--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
     </head>
 
-    <body><div class="centered-text-container">
+    <body><div class="centered--container">
         <h1><b>→ nimi mute</b></h1>
         <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
         <br>tenpo kama la mi o pali e nimi mute sin a.
