--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -4,9 +4,7 @@
         <meta charset="UTF-8">
         <title>≠</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@1,800&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300&display=swap');</style> 
+        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,300;1,800&display=swap');</style> 
     </head>
 
     <body><div class="centered--container">
