--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -7,7 +7,7 @@
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,300;1,800&display=swap');</style> 
     </head>
 
-    <body><div class="centered--container">
+    <body><div class="centered-container">
         <h1><b>→ nimi mute</b></h1>
         <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
         <br>tenpo kama la mi o pali e nimi mute sin a.
