changed the container type

--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -6,7 +6,7 @@
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,300;1,300;1,800&display=swap');</style></head>
 
-    <body><div class="centered-text-container">
+    <body><div class="centered-container">
 
         <h1><b>→ tomo ni</b></h1>
         <p style="font-size: large; padding: 10px">
