--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>→ jan</b></h1>
+        <h1><b>jan</b></h1>
         <p style="font-size: large; padding: 10px">
         jan li suli.
         <br>jan li ken sona e ijo mute.
