--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>→ suno</b></h1>
+        <h1><b>suno</b></h1>
         <p style="font-size: large; padding: 10px">
         tenpo mun.
         <br>mi mute li tawa.
