--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -8,7 +8,7 @@
 
     <body><div class="centered-container">
 
-        <h1><b>→ tomo ni</b></h1>
+        <h1><b>tomo ni</b></h1>
         <p style="font-size: large; padding: 10px">
         tomo ni li suli a
         <br>sinpin ona li laso telo walo
