--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>→ tomo pi esun lipu</b></h1>
+        <h1><b>tomo pi esun lipu</b></h1>
         <p style="font-size: large; padding: 10px">
         toki a.
         <br>mi lon tomo pi esun lipu.
