changed nimi mute header

--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -8,7 +8,7 @@
     </head>
 
     <body><div class="centered-container">
-        <h1><b>→ nimi mute</b></h1>
+        <h1><b>nimi mute</b></h1>
         <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
