added sitelen pona version of jan

--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -28,7 +28,7 @@
         <br> 
         <br>jan mute li lon.
         <br>tenpo suli la jan li lon.
-        <br>jan li lon lon ma ale.
+        <br>jan li lon ma ale.
         <br>ma seli la, jan li lon.
         <br>ma kasi la, jan li lon.
         <br>ma lete la, jan li lon.
