--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -16,7 +16,7 @@
             <li><a href="/mute-ante/nimi-mute/tomo-ni"><b>tomo ni</b> (nimi 115)</a></li>
             <li><a href="/mute-ante/nimi-mute/suno"><b>suno</b> (nimi 218)</a></li>
             <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo"><b>len pi laso telo</b> (nimi 647)</a></li>
-            <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a></li>
+            <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a> (<a href="/mute-ante/nimi-mute/sitelen-pona/jan">󱥠󱥔</a>)</li>
             <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu"><b>tomo pi esun lipu</b> (nimi 884)</a></li>
             </ul>
         <p><a href="/mute-ante"> ⇤ o tawa monsi</a></p>
